--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -35,11 +35,13 @@ layout: default
         {% endif %}
         
         {% if page.collection == 'teaching' %}
-          <p> {{ page.type }}, <i>{{ page.venue }}</i>, {{ page.date | default: "2023-01-01" | date: "%Y" }} </p>
+          <p> {{ page.type }}, <i>{{ page.venue }}</i>, {{ page.date | default: "2024-01-01" | date: "%Y" }} </p>
         {% elsif page.collection == 'blogs' %}
-          <p> <i>{{ page.venue }}</i>, {{ page.date | default: "2023-01-01" | date: "%Y" }} </p>
+          <p> <i>{{ page.venue }}</i>, {{ page.date | default: "2024-01-01" | date: "%Y" }} </p>
+        {% elsif page.collection == 'activities' %}
+          <p> <i>{{ page.title }}</i> </p>
         {% elsif page.venue and page.date %}
-          <p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
+          <p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "2024-01-01" | date: "%Y" }} </p>
         {% elsif page.date %}
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
